<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/storages_category">
        <ListPreference
            android:key="main_storage"
            android:title="@string/main_storage_title"
            android:entries="@array/main_storage_names"
            android:entryValues="@array/main_storage_values"
            android:defaultValue="int"
            android:summary="%s"
            >
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/tuning_category">
        <ListPreference
            android:key="zram_size"
            android:title="@string/zram_title"
            android:entries="@array/zram_names"
            android:entryValues="@array/zram_values"
            android:defaultValue="128"
            android:summary="%s"
            >
        </ListPreference>
        <ListPreference
            android:key="cpugov_balanced"
            android:title="@string/cpugov"
            android:summary="@string/cpugov_balanced"
            android:dialogTitle="@string/cpugov_balanced"
            >
        </ListPreference>
        <ListPreference
            android:key="cpugov_powersave"
            android:title="@string/cpugov"
            android:summary="@string/cpugov_powersave"
            android:dialogTitle="@string/cpugov_powersave"
            >
        </ListPreference>
        <SwitchPreference
            android:key="cpu_boost_freq"
            android:title="@string/cpu_boost"
            android:summary="@string/cpu_boost_summary"
            android:defaultValue="true"
            />
        <SwitchPreference
            android:key="cpu_boost_cores"
            android:title="@string/intelliplug_boost"
            android:summary="@string/intelliplug_boost_summary"
            android:defaultValue="true"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/charger_category">
        <SwitchPreference
            android:key="fast_charge"
            android:title="@string/fast_charge"
            android:defaultValue="false"
            />
        <ListPreference
            android:key="fast_charge_level"
            android:title="@string/charge_level"
            android:entries="@array/chargelevel_names"
            android:entryValues="@array/chargelevel_values"
            android:defaultValue="0"
            android:dependency="fast_charge"
            android:summary="%s"
            >
        </ListPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/touchscreen_category">
        <ListPreference
            android:key="keys_order"
            android:title="@string/keys_order_title"
            android:entries="@array/keys_order_names"
            android:entryValues="@array/keys_order_values"
            android:defaultValue="0"
            android:summary="%s"
            >
        </ListPreference>
        <Preference
            android:key="dt2w"
            android:title="@string/dt2w_title"
            />
        <ListPreference
            android:key="dt2w_screen_policy"
            android:title="@string/dt2w_screen_title"
            android:entries="@array/dt2w_policy_names"
            android:entryValues="@array/dt2w_policy_values"
            android:defaultValue="TURN_ON"
            android:summary="%s"
            >
        </ListPreference>
        <ListPreference
            android:key="dt2w_left_policy"
            android:title="@string/dt2w_left_title"
            android:entries="@array/dt2w_policy_names"
            android:entryValues="@array/dt2w_policy_values"
            android:defaultValue="DOZE"
            android:summary="%s"
            >
        </ListPreference>
        <ListPreference
            android:key="dt2w_middle_policy"
            android:title="@string/dt2w_middle_title"
            android:entries="@array/dt2w_policy_names"
            android:entryValues="@array/dt2w_policy_values"
            android:defaultValue="DOZE"
            android:summary="%s"
            >
        </ListPreference>
        <ListPreference
            android:key="dt2w_right_policy"
            android:title="@string/dt2w_right_title"
            android:entries="@array/dt2w_policy_names"
            android:entryValues="@array/dt2w_policy_values"
            android:defaultValue="DOZE"
            android:summary="%s"
            >
        </ListPreference>
        <SwitchPreference
            android:key="palm2sleep"
            android:title="@string/palm2sleep_title"
            android:defaultValue="true"
            />
        <Preference android:title="@string/prox_naked_cal">
            <intent android:action="com.ztemt.naked_proxcalibrate.ENTRY_ACTION" />
        </Preference>
        <Preference android:title="@string/prox_cal">
            <intent android:action="com.ztemt.proxcalibrate.ENTRY_ACTION" />
        </Preference>
    </PreferenceCategory>
    <!--Preference android:title="@string/port_enabler">
        <intent android:action="com.ztemt.port.ENTRY_ACTION" />
    </Preference-->
</PreferenceScreen>
